--- a/theme/src/panels/queue.scss
+++ b/theme/src/panels/queue.scss
@@ -273,17 +273,3 @@
         }
     }
 }
-
-.LayoutResizer__resize-bar.LayoutResizer__inline-start {
-    opacity: 1 !important;
-    width: 3px;
-    inset-inline-start: -3px;
-    border-left: solid 1px var(--wmp11-window);
-    background-color: var(--wmp11-separator-shadow);
-    border-right: solid 1px var(--wmp11-separator-light);
-    cursor: ew-resize;
-
-    &::after {
-        display: none;
-    }
-}
