--- a/theme/src/ui/mainarea.scss
+++ b/theme/src/ui/mainarea.scss
@@ -118,6 +118,26 @@ body[data-hide-libx],
     div {
         transition: none !important;
     }
+
+    .LayoutResizer__resize-bar.LayoutResizer__inline-start {
+        opacity: 1 !important;
+        width: 3px;
+        inset-inline-start: -3px;
+        border-left: solid 1px var(--wmp11-window);
+        background-color: var(--wmp11-separator-shadow);
+        border-right: solid 1px var(--wmp11-separator-light);
+        cursor: ew-resize;
+    
+        &::after {
+            display: none;
+        }
+    }
+
+    &:not(:has(aside)) {
+        .LayoutResizer__resize-bar.LayoutResizer__inline-start {
+            display: none;
+        }
+    }
 }
 
 .Root {
